# simple_python_project_template

./: .envrc  pyproject.toml  requirements-dev.txt  requirements.txt
src/simple_python_project_template/: app.py
